[gd_scene load_steps=6 format=3 uid="uid://ci2dwb3wk37pf"]

[ext_resource type="LabelSettings" uid="uid://ic62h8sh4tw2" path="res://resources/fonts/gameplay_ui_label.tres" id="1_0vhlx"]
[ext_resource type="Script" path="res://ui/repair_widget/repair_widget.gd" id="1_jdfst"]
[ext_resource type="FontFile" uid="uid://ctlrdesvuvalj" path="res://resources/fonts/LCDBlock.ttf" id="3_c48nw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7iymb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wafwk"]
bg_color = Color(1, 1, 1, 0.231373)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[node name="RepairWidget" type="VBoxContainer"]
script = ExtResource("1_jdfst")

[node name="RepairLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Repairs"
label_settings = ExtResource("1_0vhlx")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RepairRectangle" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_7iymb")
theme_override_styles/fill = SubResource("StyleBoxFlat_wafwk")
value = 100.0
show_percentage = false

[node name="RepairsCountLabel" type="Label" parent="RepairRectangle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -69.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_c48nw")
theme_override_font_sizes/font_size = 80
text = "2"
horizontal_alignment = 1
vertical_alignment = 2
